# sudohasku

./: .hlint.yaml  CHANGELOG.md  LICENSE  README.md  sudohasku.cabal
app/: App.hs  Domain.hs  Download.hs  Drawing.hs  Main.hs  Shuffling.hs  VtyOptic.hs
app/Base/: Drawing.hs
app/Game/: Domain.hs  Drawing.hs  Inputs.hs
app/Menu/: Domain.hs  Drawing.hs  Inputs.hs
