cabal-version:      3.0
name:               sudohasku
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Liam Goodacre
maintainer:         goodacre.liam@gmail.com
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
  ghc-options: -Wall -Werror -Wextra

executable sudoku-tui
  import:           warnings
  main-is:          Main.hs
  default-extensions:
    ApplicativeDo,
    BlockArguments,
    DerivingStrategies,
    GADTs,
    GHC2021,
    LambdaCase,
    OverloadedStrings,
    RecordWildCards,
    StrictData,
    ViewPatterns
  build-depends:
    base,
    brick,
    containers,
    vty,
    lens
  hs-source-dirs:   app
  default-language: GHC2021
  ghc-options: -threaded -rtsopts
