cabal-version:      3.0
name:               sudohasku
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Liam Goodacre
maintainer:         goodacre.liam@gmail.com
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
  ghc-options: -Wall -Werror -Wextra

executable sudohasku
  import:           warnings
  main-is:          Main.hs
  other-modules:
    App,
    Base.Drawing,
    Domain,
    Download,
    Drawing,
    Game.Domain,
    Game.Drawing,
    Game.Inputs,
    Menu.Domain,
    Menu.Drawing,
    Menu.Inputs,
    Shuffling,
    VtyOptic
  default-extensions:
    ApplicativeDo,
    BlockArguments,
    DerivingStrategies,
    GADTs,
    GHC2021,
    LambdaCase,
    OverloadedRecordDot,
    OverloadedStrings,
    RecordWildCards,
    StrictData,
    TemplateHaskell,
    ViewPatterns
  build-depends:
    aeson,
    base,
    brick>=2.4,
    containers,
    dependent-map,
    dependent-sum,
    http-conduit,
    lens,
    mtl,
    random,
    random-shuffle,
    text,
    time,
    vty>=6.0
  hs-source-dirs:   app
  default-language: GHC2021
  ghc-options: -threaded -rtsopts -O2
